# void_engine

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build  xmake.lua
examples/: clock.cpp  font.cpp  simple.cpp
include/: void.hpp
include/ecs/: common.hpp  entity_storage.hpp  pool.hpp  pool_base.hpp  pool_storage.hpp  scene.hpp  scene_view.hpp  view.hpp
include/void_engine/: logger.hpp
include/void_engine/display/: display_manager.hpp
include/void_engine/ecs/: common.hpp  component_pool.hpp  component_pool_base.hpp  component_pool_manager.hpp  entity.hpp  entity_manager.hpp  entity_storage.hpp  pool.hpp  pool_base.hpp  pool_storage.hpp  scene.hpp  view.hpp  world.hpp
include/void_engine/event/: event.hpp  event_base.hpp  event_listener.hpp  event_listener_base.hpp  event_manager.hpp  types.hpp
include/void_engine/graphics/: mesh.hpp  vertex_array.hpp
include/void_engine/input/: input_handler.hpp  keyboard.hpp  mouse.hpp
include/void_engine/monitor/: monitor.hpp  monitor_manager.hpp
include/void_engine/renderer/: buffer.hpp  common.hpp  mesh.hpp  renderer.hpp  shader.hpp  vertex_array.hpp
include/void_engine/resource/: image.hpp  resource_manager.hpp
include/void_engine/resources/: image.hpp  resource_manager.hpp  shader.hpp  shader_manager.hpp  texture.hpp  texture_manager.hpp
include/void_engine/utility/: bit_mask.hpp  event.hpp  get_exec_path.hpp  get_gl_type.hpp  image.hpp  logger.hpp  state.hpp  string_hash.hpp  timer.hpp  transform.hpp
include/void_engine/utils/: get_exec_path.hpp  logger.hpp
include/void_engine/window/: window.hpp  window_event_handler.hpp  window_input_handler.hpp  window_manager.hpp
include/window/: window_manager.hpp
resources/: embed.cpp  embed.hpp
resources/shaders/: font.frag  font.vert  font_screen.vert  shape.frag  shape.vert
src/: logger.cpp  void_engine.cppm
src/display/: display.cppm  display_manager.cpp  display_manager.cppm  module.cppm
src/display/monitor/: module.cppm  monitor.cpp  monitor.cppm  monitor_manager.cpp  monitor_manager.cppm  video_mode.cppm
src/display/window/: enums.cppm  module.cppm  window.cpp  window.cppm  window_event_handler.cpp  window_event_handler.cppm  window_events.cppm  window_hints.cppm  window_input_handler.cpp  window_input_handler.cppm  window_manager.cpp  window_manager.cppm
src/ecs/: common.cpp  component_pool.cppm  component_pool_base.cppm  component_pool_manager.cppm  entity.cpp  entity.cppm  entity_manager.cpp  entity_manager.cppm  entity_storage.cpp  module.cppm  pool.cpp  pool_storage.cpp  scene.cpp  world.cppm
src/graphics/: mesh.cpp  mesh.cppm  module.cppm  vertex_array.cpp  vertex_array.cppm
src/graphics/buffer/: array_buffer.cppm  buffer.cpp  buffer.cppm  element_buffer.cpp  element_buffer.cppm  enums.cppm  uniform_buffer.cppm
src/graphics/camera/: camera.cpp  camera.cppm  enums.cppm  orthographic_camera.cpp  orthographic_camera.cppm  perspective_camera.cpp  perspective_camera.cppm
src/graphics/geometry/: attributes.cppm  circle.cpp  cube.cpp  line.cpp  module.cppm  point.cpp  polygon.cpp  quad.cpp
src/graphics/mesh/: mesh.cpp  mesh.cppm
src/graphics/renderer/: enums.cppm  renderer.cpp  renderer.cppm
src/graphics/shader/: shader.cpp  shader.cppm  shader_enums.cppm  shader_source.cppm
src/graphics/text/: text.cpp  text.cppm
src/graphics/texture/: font_atlas.cpp  font_atlas.cppm  texture.cpp  texture.cppm  texture_enums.cppm  uv_region.cppm
src/graphics/vertex_array/: vertex_array.cpp  vertex_array.cppm
src/input/: input_handler.cpp  keyboard.cpp  mouse.cpp
src/monitor/: monitor.cpp  monitor_manager.cpp
src/renderer/: buffer.cpp  mesh.cpp  renderer.cpp  shader.cpp  vertex_array.cpp
src/renderer/buffer/: buffer.cpp  element_buffer.cpp  vertex_buffer.cpp
src/renderer/buffers/: buffer.cpp
src/renderer/camera/: camera.cpp  free_camera_2d.cpp  free_camera_3d.cpp  orthographic_camera.cpp  perspective_camera.cpp
src/renderer/geometry/: circle.cpp  cube.cpp  line.cpp  point.cpp  polygon.cpp  quad.cpp
src/renderer/renderer/: renderer.cpp
src/renderer/vertex_array/: vertex_array.cpp  vertex_array_layout.cpp
src/resource/: image.cpp  resources_manager.cpp
src/resource/font/: font.cpp  font_manager.cpp  text.cpp
src/resource/image/: image.cpp
src/resource/shader/: shader.cpp  shader_manager.cpp
src/resource/texture/: texture.cpp  texture_manager.cpp
src/resources/: image.cpp  module.cppm  resources_manager.cpp  resources_manager.cppm  shader.cpp  shader_manager.cpp  texture.cpp  texture_manager.cpp
src/resources/font/: font.cpp  font.cppm  font_manager.cpp  font_manager.cppm  glyph.cppm  glyph_bitmap.cppm  text.cpp  text.cppm
src/resources/image/: enums.cppm  image.cpp  image.cppm  image_enums.cppm
src/resources/shader/: enums.cppm  shader.cpp  shader.cppm  shader_manager.cpp  shader_manager.cppm  shader_source.cppm
src/resources/texture/: enums.cppm  texture.cpp  (+3 more)
src/utility/: bit_mask.cppm  event.cppm  event.cppm.bak  event_bus.cppm  get_exec_path.cpp  get_exec_path.cppm  get_gl_type.cpp  get_gl_type.cppm  image.cpp  logger.cpp  logger.cppm  module.cppm  read_bytes.cpp  read_bytes.cppm  state.cppm  string_hash.cppm  timer.cpp  timer.cppm  transform.cpp  transform.cppm  utility.cppm
src/utils/: get_exec_path.cpp  logger.cpp
src/window/: module.cppm  window.cpp  window_event_handler.cpp  window_input_handler.cpp  window_manager.cpp
subprojects/: glad.wrap
tests/: ecs.test.cpp  logger.cpp  meson.build  xmake.lua
tests/ecs/: common.test.cpp  component_pool.test.cpp  component_pool_manager.test.cpp  entity.test.cpp  entity_manager.test.cpp  entity_storage.test.cpp  pool.test.cpp  pool_storage.test.cpp  scene.test.cpp  view.test.cpp  world.test.cpp
tests/event/: event.test.cpp  event_listener.test.cpp  event_manager.test.cpp
tests/resource/: image.test.cpp
tests/resources/: image.test.cpp  texture_manager.test.cpp
tests/utility/: get_exec_path.test.cpp  logger.test.cpp
tests/utils/: get_exec_path.test.cpp  logger.test.cpp
tests/window/: window.test.cpp  window_manager.test.cpp
(+171 files in other folders)
